# matrix

./: Jenkinsfile
examples/Helloworld/: CMakeLists.txt
examples/ToyScope/: CMakeLists.txt
keychain/: CMakeLists.txt  main.cc
python/: architect.py  keymaster.py
python/python2/: setup.py
python/python2/matrix/: __init__.py  architect.py  keymaster.py
python/python3/: architect.py  keymaster.py  setup.py
python/python3/matrix/: __init__.py  architect.py  keymaster.py
slogger/: CMakeLists.txt
src/: Architect.cc  CMakeLists.txt  GenericBuffer.cc  GenericDataConsumer.cc  Keymaster.cc  RTTransportClient.cc  RTTransportServer.cc  TransportClient.cc  TransportServer.cc  ZMQTransportClient.cc  ZMQTransportServer.cc  log_t.cc  matrix_util.cc
src/matrix/: Architect.h  DataCallback.h  DataInterface.h  DataSink.h  DataSource.h  GenericBuffer.h  Keymaster.h  RTTransportClient.h  RTTransportServer.h  TCondition.h  TransportClient.h  TransportServer.h  ZMQTransportClient.h  ZMQTransportServer.h  log_t.h  matrix_util.h  tsemfifo.h  yaml_util.h
unit_tests/: CMakeLists.txt  log_t_test.cc  matrix_unittest.cc
